fix cancel button visibility on leagues page

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -25,10 +25,10 @@
   }
 }
 
-.active {
-  font-weight: bold;
-  text-decoration: underline;
-}
+// .active {
+//   font-weight: bold;
+//   text-decoration: underline;
+// }
 
 .bm-burger-button {
   position: fixed;
