--- a/src/pages/LeagueStandings/LeagueStandings.scss
+++ b/src/pages/LeagueStandings/LeagueStandings.scss
@@ -21,6 +21,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  justify-content: center;
   font-size: 0.8rem;
   // padding-left: 1rem;
 }
@@ -49,18 +50,29 @@
 .key {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
   padding: 0 1rem;
+
+  &__item {
+    display: flex;
+    flex-direction: row;
+    gap: 0.2rem;
+    align-items: center;
+    justify-content: center;
+  }
 
   &__wrapper {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
+    justify-content: center;
     padding: 0 1rem;
     gap: 0.5rem;
+    margin: 1rem;
   }
   &__icon {
-    width: 2rem;
+    width: 1rem;
+    height: 1rem;
   }
 }
