--- a/src/pages/SignupPage/SignupPage.scss
+++ b/src/pages/SignupPage/SignupPage.scss
@@ -61,3 +61,7 @@
     }
   }
 }
+
+.signup__error {
+  color: red;
+}
